--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,13 +10,13 @@
 
     <title>응용통계인의 밤</title>
     <!-- Bootstrap Core CSS -->
-    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="/stylesheets/stylish-portfolio.css" rel="stylesheet">
+    <link href="/assets/stylish-portfolio.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="/stylesheets/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/assets/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
