--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -120,9 +120,9 @@
                     <h4><strong>건국대학교 응용통계학과</strong>
                     </h4>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i>회장 이가형</li>
-                        <li><i class="fa fa-phone fa-fw"></i> 010 - 9984 - 4928</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">kustatvv@gmail.com</a>
+                        <li>회장 이가형</li>
+                        <li> 010 - 9984 - 4928</li>
+                        <li><a href="mailto:name@example.com">kustatvv@gmail.com</a>
                         </li>
                     </ul>
                     <hr class="small">
