--- a/app/assets/stylesheets/stylish-portfolio.css
+++ b/app/assets/stylesheets/stylish-portfolio.css
@@ -156,7 +156,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/poster.jpeg) no-repeat center center scroll;
+    background: url(../img/poster.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: contain;
